# cookiecutter-datascience-simple

./: .gitignore  .pylintrc  Makefile  Pipfile  README.md  cookiecutter.json  pyproject.toml
tests/: helper.py  test_initialization.py  test_pipfile.py  test_pyproject_toml.py  test_readme.py  test_structure.py
{{ cookiecutter.project_slug }}/: .flake8  .gitignore  .pylintrc  Makefile  Pipfile  pyproject.toml
{{ cookiecutter.project_slug }}/notebooks/: template.ipynb
